deployment/networking/http/mlflow/mlflow-minio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow-minio-virtualservice
spec:
  hosts:
  - "mlflow.minio.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: mlflow-minio-service.mlflow.svc.cluster.local
        port:
          number: 9001
