deployment/networking/http/mlflow/mlflow-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow-virtualservice
spec:
  hosts:
  - "mlflow.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: mlflow.mlflow.svc.cluster.local
        port:
          number: 5000
